--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "express-session": "^1.17.3",
     "express-mysql-session": "^2.1.8",
-    "mysql2": "^2.3.3"
+    "express-session": "^1.17.3",
+    "mysql2": "^2.3.3",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
