working favorites functionality

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysql_hbs_auth_starter",
+  "name": "furry-friends",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,14 +10,15 @@
     "start": "node index.js",
     "dev": "npm run mysql && nodemon index.js",
     "mysql": "npm run mysql:restart && npm run mysql:check",
-    "mysql:restart": "npm run mysql:stop; npm run mysql:start",
-    "mysql:start": "export FLAG=-d && npm run mysql:run",
-    "mysql:start:log": "export FLAG=-it && npm run mysql:run",
+    "mysql:restart": "npm run mysql:stop && npm run mysql:start",
+    "mysql:start": "cross-env FLAG=-d npm run mysql:run",
+    "mysql:start:log": "cross-env FLAG=-it npm run mysql:run",
     "mysql:start:shell": "npm run mysql:restart && npm run mysql:check && npm run mysql:shell",
-    "mysql:run": "docker run $FLAG --rm -p 3306:3306 -v $(pwd)/schema:/docker-entrypoint-initdb.d --name=mysql-sandbox -e MYSQL_ALLOW_EMPTY_PASSWORD=root -e MYSQL_DATABASE=$npm_package_config_DB_NAME mysql:8.4 mysqld --mysql-native-password=ON --authentication_policy=mysql_native_password",
+    "mysql:run": "echo FLAG is: $FLAG && docker run $FLAG --rm -p 3306:3306 -v \"$(pwd)/schema:/docker-entrypoint-initdb.d\" --name=mysql-sandbox -e MYSQL_ALLOW_EMPTY_PASSWORD=root -e MYSQL_DATABASE=$npm_package_config_DB_NAME mysql:8.4 mysqld --mysql-native-password=ON --authentication_policy=mysql_native_password",
     "mysql:stop": "docker container stop mysql-sandbox",
     "mysql:shell": "docker exec -it mysql-sandbox mysql",
-    "mysql:check": "until docker exec -it mysql-sandbox mysql -e \"use $npm_package_config_DB_NAME; show tables;\"; do echo ...; sleep 1; done && sleep 3"
+    "mysql:check": "until docker exec -it mysql-sandbox mysql -e \"use $npm_package_config_DB_NAME; show tables;\"; do echo ...; sleep 1; done && sleep 3",
+    "mysql:pull": "docker pull mysql:8.4"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +36,7 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.22"
   }
 }
